<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.elastic</groupId>
	<artifactId>lifelineglb</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>An elastic implementation of the lifeline-based Global Load Balancer</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.github.handist.elastic</groupId>
			<artifactId>apgas</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.4</version>
		</dependency>		
	</dependencies>

	<build>
		<plugins>
			<plugin>
            <artifactId>maven-dependency-plugin</artifactId>
            	<executions>
              		<execution>
                		<phase>package</phase>
                		<goals>
                  			<goal>copy-dependencies</goal>
                		</goals>
                		<configuration>
                  			<outputDirectory>${project.build.directory}</outputDirectory>
                		</configuration>
              		</execution>
          		</executions>
        	</plugin>
		</plugins>
	</build>
</project>